<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Lokasi Berhantu</string>
    <string name="welcome_my_friend">Welcome My Friend</string>
    <string name="lokasi_horror_indonesia">The Most Scariest Place in Indonesia</string>
    <string name="don_t_be_scared">DON\'T BE SCARED</string>
    <string name="name_owner">Mohammad Fahmi</string>
    <string name="email">mohammadfahmi417@gmail.com</string>
    <string name="activity_about_title">About Me</string>
    <string name="about_me">I am a 6th semester Computer Science student at Institute Technology of Kalimantan, I\'ve been in love to
    programming since I was writing my first program back when I was in vocational school, I remember
    wasting a lot of time back then just to trying different tags and tutorials on google. Ever since that time I
    knew programming it’s something that I like.
    \n\n
    This passion brings me through learning about solving real-world problem using technology as solution.
    Until I was participated in technology-based competition like Hackathon, at this competition really
    challenge my programming skills and communication skills. I was responsible for the development of an
    Android Mobile App this bring me to opportunity to learn about connecting android app and API. Beside
    of that I also have interest in Python programming, which I use for my last project about Sentiment
    Analysis from twitter about COVID-19 in Indonesia.
    \n\n
    I hoped that someday I will be working as software engineer, but there certainly more things that I really
    want to learn, so I am really excited and burning with motivation for learning not just about programming
    but also about life in general. </string>
    <string name="detail_img">Detail Img</string>
    <string name="share">Share</string>
    <string name="linkedin">LinkedIn</string>
    <string name="github">Github</string>
    <string name="gmail">Gmail</string>
    <string name="about">About</string>
</resources>